test/release/examples/spec/Procedures/ref-return-intent-pair.good
ref-return-intent-pair.chpl:8: error: halt reached - cannot assign value to A(1) if A(0) <= 0
